src/test/ui/lifetimes/borrowck-let-suggestion.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-let-suggestion.rs:12:13
   |
LL |     let x = vec![1].iter();
   |             ^^^^^^^       - temporary value dropped here while still borrowed
   |             |
   |             temporary value does not live long enough
LL | }
   | - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
